--- a/src/components/ui/AnswerButton/AnswerButton.module.scss
+++ b/src/components/ui/AnswerButton/AnswerButton.module.scss
@@ -19,9 +19,21 @@
     --fill-color: var(--orange-5);
   }
 
+  &:disabled {
+    cursor: not-allowed;
+    pointer-events: none;
+    opacity: 0.5;
+  }
+
   &.correct {
     --border-color: var(--green-100);
     --fill-color: var(--green-5);
+  }
+
+  &.correctNotSelected {
+    --border-color: var(--green-100);
+    --fill-color: var(--green-5);
+    animation: pulsating 0.75s infinite;
   }
 
   &.wrong {
@@ -87,5 +99,17 @@
   &__Letter {
     font-weight: 600;
     color: var(--orange-100);
+  }
+}
+
+@keyframes pulsating {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.05);
+  }
+  100% {
+    transform: scale(1);
   }
 }
