fix: mobile size buttons model

--- a/src/components/game/QuestionAnswersSection/QuestionAnswersSection.module.scss
+++ b/src/components/game/QuestionAnswersSection/QuestionAnswersSection.module.scss
@@ -28,6 +28,7 @@
   &__Answers {
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 8px;
     margin: 0;
     margin-bottom: 32px;
@@ -47,6 +48,11 @@
 
   &__Answer {
     width: 100%;
+    max-width: 300px;
+
+    &__Button {
+      width: 100%;
+    }
   }
 
   &__SubmitButton {
