fix: change desktop answer style

--- a/src/components/game/QuestionAnswersSection/QuestionAnswersSection.module.scss
+++ b/src/components/game/QuestionAnswersSection/QuestionAnswersSection.module.scss
@@ -50,6 +50,10 @@
     width: 100%;
     max-width: 300px;
 
+    @include desktop {
+      max-width: unset;
+    }
+
     &__Button {
       width: 100%;
     }
