--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -19,7 +19,7 @@
 
 body {
   font-family: Inter, "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  overflow-x: hidden;
+  // overflow-x: hidden;
 }
 
 .container {
